--- a/SWD392_BiologyRecognition_AppMobile/.env
+++ b/SWD392_BiologyRecognition_AppMobile/.env
@@ -1,4 +1,4 @@
-API_BASE_URL=https://your-backend-swaggerhub-url.com/api
+API_BASE_URL=https://10.0.2.2:7198/api
 CLOUDINARY_CLOUD_NAME=dtsr6gipy
 CLOUDINARY_API_KEY=212571665722836
 CLOUDINARY_API_SECRET=OEMETrfO3SpDFMzYhGSLWXL3Wy8
