--- a/SWD392_BiologyRecognition_AppMobile/pubspec.yaml
+++ b/SWD392_BiologyRecognition_AppMobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.0.7
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
