Create method for biology_search and the detail page for topics and articles.

--- a/SWD392_BiologyRecognition_AppMobile/.env
+++ b/SWD392_BiologyRecognition_AppMobile/.env
@@ -1,4 +1,5 @@
-API_BASE_URL=https://10.0.2.2:7198/api
+# API_BASE_URL=https://10.0.2.2:7198/api
+API_BASE_URL=https://192.168.2.15:7198/api
 CLOUDINARY_CLOUD_NAME=dtsr6gipy
 CLOUDINARY_API_KEY=212571665722836
 CLOUDINARY_API_SECRET=OEMETrfO3SpDFMzYhGSLWXL3Wy8
