Upload final project for App mobile

--- a/SWD392_BiologyRecognition_AppMobile/.env
+++ b/SWD392_BiologyRecognition_AppMobile/.env
@@ -1,4 +1,6 @@
 # API_BASE_URL=https://10.0.2.2:7198/api
+# API_BASE_URL=https://172.20.10.2:7198/api # API 4G
+# API_BASE_URL=https://biologyrecognition-d3f8esdnhpd0h3c6.southeastasia-01.azurewebsites.net/api
 API_BASE_URL=https://192.168.2.15:7198/api
 CLOUDINARY_CLOUD_NAME=dtsr6gipy
 CLOUDINARY_API_KEY=212571665722836
