--- a/SWD392_BiologyRecognition_AppMobile/android/app/src/main/AndroidManifest.xml
+++ b/SWD392_BiologyRecognition_AppMobile/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <!-- Thêm các permissions này VÀO TRƯỚC thẻ <application> -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    
     <application
         android:label="se1709_swd392_biologyrecognitionsystem_appmobile"
         android:name="${applicationName}"
