--- a/SWD392_BiologyRecognition_AppMobile/pubspec.yaml
+++ b/SWD392_BiologyRecognition_AppMobile/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.0
+  onesignal_flutter: ^5.0.4
+  video_player: ^2.8.1
+  cached_network_image: ^3.3.0
+  photo_view: ^0.14.0
+  intl: ^0.18.1 # Cho format ngày tháng
+  google_sign_in: ^6.1.5 # Chỉ cần Google Sign-In
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
